--- a/manual_prices/MiniMax.yaml
+++ b/manual_prices/MiniMax.yaml
@@ -8,17 +8,18 @@ models:
       output: 8.4 rmb / M
       extra_ratios:
         - cached_tokens: 0.21 rmb / M
-        # - cached_write_tokens: 2.625 rmb / M
+        - cached_write_tokens: 2.625 rmb / M
 
-    # M2.5 Lightning - 高效高速Agent模式（M2.5极速版）
-    MiniMax-M2.5-lightning:
+    # M2.5 Highspeed - 高效高速Agent模式（M2.5极速版）
+    MiniMax-M2.5-highspeed:
       aliases:
+        - MiniMax-M2.5-lightning
         - MiniMax-M2.5-Lightning
-      input: 2.1 rmb / M
+      input: 4.2 rmb / M
       output: 16.8 rmb / M
       extra_ratios:
         - cached_tokens: 0.21 rmb / M
-        # - cached_write_tokens: 2.625 rmb / M
+        - cached_write_tokens: 2.625 rmb / M
 
     # M2.1系列 - 强大多语言编程实力，全面升级编程体验
     MiniMax-M2.1:
@@ -26,17 +27,18 @@ models:
       output: 8.4 rmb / M
       extra_ratios:
         - cached_tokens: 0.21 rmb / M
-        # - cached_write_tokens: 2.625 rmb / M
+        - cached_write_tokens: 2.625 rmb / M
 
-    # M2.1 Lightning - 高效高速Agent模式（M2.1极速版），适用于对话问答、轻量搜索、简单编码任务
-    MiniMax-M2.1-lightning:
+    # M2.1 Highspeed - 高效高速Agent模式（M2.1极速版），适用于对话问答、轻量搜索、简单编码任务
+    MiniMax-M2.1-highspeed:
       aliases:
+        - MiniMax-M2.1-lightning
         - MiniMax-M2.1-Lightning
-      input: 2.1 rmb / M
+      input: 4.2 rmb / M
       output: 16.8 rmb / M
       extra_ratios:
         - cached_tokens: 0.21 rmb / M
-        # - cached_write_tokens: 2.625 rmb / M
+        - cached_write_tokens: 2.625 rmb / M
 
     # M2系列 - 专为高效编码与Agent工作流而生
     MiniMax-M2:
@@ -46,7 +48,7 @@ models:
       output: 8.4 rmb / M
       extra_ratios:
         - cached_tokens: 0.21 rmb / M
-        # - cached_write_tokens: 2.625 rmb / M
+        - cached_write_tokens: 2.625 rmb / M
 
     # M2-her - 角色扮演模型
     M2-her:
